--- a/themer/templates/i3/config.yaml
+++ b/themer/templates/i3/config.yaml
@@ -14,10 +14,12 @@ plugins:
     - themer.ColorParser
   activators:
     - themer.activators.i3.I3Activator
+    - wallpaper.WallpaperActivator
 files:
   i3.tpl: i3.conf
   fish.tpl: config.fish
   powerline.tpl: colors.json
   dunst.tpl: dunstrc
   terminal.tpl: terminalrc
-
+  #  gtk.tpl: gtk.css
+  #  gtkrc.tpl: gtkrc
