--- a/themer/Rei/i3.conf
+++ b/themer/Rei/i3.conf
@@ -12,10 +12,10 @@
 set $mod Mod4
 
 #                       BORDER          BACKGROUND      TEXT            INDICATOR
-client.focused          #1f2f92    #1f2f92    #d8f8ff    #1f2f92
-client.focused_inactive #1e51b4    #1e51b4    #e0f4f3    #1e51b4
-client.unfocused        #477dd7    #477dd7    #e0f4f3    #477dd7
-client.urgent           #1c1f4b    #1c1f4b    #d8f8ff    #1c1f4b
+client.focused          #be0411    #be0411    #fca8ad    #be0411
+client.focused_inactive #fe091b    #fe091b    #fca8ad    #fe091b
+client.unfocused        #fa5d66    #fa5d66    #5d0612    #fa5d66
+client.urgent           #6b0916    #6b0916    #fca8ad    #6b0916
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
