--- a/etc/lxdm/lxdm.conf
+++ b/etc/lxdm/lxdm.conf
@@ -31,7 +31,7 @@ arg=/usr/bin/X -background vt1
 
 [display]
 ## gtk theme used by greeter
-gtk_theme=Clearlooks
+gtk_theme=Adwaita
 
 ## background of the greeter
 bg=/usr/share/backgrounds/bg.png
@@ -43,7 +43,7 @@ bottom_pane=0
 lang=0
 
 ## if show keyboard layout select control
-keyboard=1
+keyboard=0
 
 ## the theme of greeter
 theme=Thanatos
