--- a/themer/Kutori/i3.conf
+++ b/themer/Kutori/i3.conf
@@ -21,7 +21,7 @@ client.urgent           #5f2028    #5f2028    #f0df75    #5f2028
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Sauce Code for Powerline 14
+font pango:Sauce Code for Powerline 0
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -42,6 +42,9 @@ bindsym $mod+Shift+Return exec thunar
 
 # start evince
 bindsym $mod+E exec evince
+
+# start write_stylus
+bindsym $mod+W exec write_stylus
 
 # kill focused window
 bindsym Control+Shift+q kill
@@ -326,6 +329,8 @@ exec --no-startup-id albert
 
 exec --no-startup-id powerline-daemon --replace
 exec_always "killall powerline-lemonbar; powerline-lemonbar -o -d -- -f 'IPAGothic-11'"
+
+exec xbindkeys
 
 bindsym $mod+Shift+g    mode "gaps"
 mode "gaps" {
