--- a/themer/Kutori/i3.conf
+++ b/themer/Kutori/i3.conf
@@ -329,7 +329,7 @@ exec --no-startup-id albert
 
 exec --no-startup-id powerline-daemon --replace
 exec --no-startup-id powerline-globmenu
-exec_always "killall powerline-lemonbar; powerline-lemonbar -o -d -- -t -o -1 -f 'IPAGothic-11'"
+exec_always "killall powerline-lemonbar; powerline-lemonbar --use_defaults -R -H 1.5 -- -f 'IPAGothic-{2}' -t -o -2"
 
 bindsym $mod+Shift+g    mode "gaps"
 mode "gaps" {
