--- a/themer/Akira/colors.yaml
+++ b/themer/Akira/colors.yaml
@@ -1,10 +1,10 @@
-level1fg: '#d0bec5'
-level1bg: '#200e24'
-level2fg: '#eccdc5'
-level2bg: '#402b4a'
-level3fg: '#f9e6df'
-level3bg: '#60486e'
-level4fg: '#fdebe8'
-level4bg: '#80668e'
-level1fgalt: '#220f27'
-level1bgalt: '#f1d6d0'
+level1fg: "#e9cb9e"
+level1bg: "#28132c"
+level2fg: "#e9cb9e"
+level2bg: "#513955"
+level3fg: "#fffecf"
+level3bg: "#a08b9e"
+level4fg: "#311929"
+level4bg: "#d1bbcf"
+level1fgalt: "#331a2a"
+level1bgalt: "#e3c896"
