--- a/themer/Akira/i3.conf
+++ b/themer/Akira/i3.conf
@@ -12,10 +12,10 @@
 set $mod Mod4
 
 #                       BORDER          BACKGROUND      TEXT            INDICATOR
-client.focused          #402b4a    #402b4a    #eccdc5    #402b4a
-client.focused_inactive #60486e    #60486e    #f9e6df    #60486e
-client.unfocused        #80668e    #80668e    #fdebe8    #80668e
-client.urgent           #200e24    #200e24    #d0bec5    #200e24
+client.focused          #513955    #513955    #e9cb9e    #513955
+client.focused_inactive #a08b9e    #a08b9e    #fffecf    #a08b9e
+client.unfocused        #d1bbcf    #d1bbcf    #311929    #d1bbcf
+client.urgent           #28132c    #28132c    #e9cb9e    #28132c
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
