add chromium theme

--- a/themer/templates/i3/config.yaml
+++ b/themer/templates/i3/config.yaml
@@ -21,5 +21,6 @@ files:
   powerline.tpl: colors.json
   dunst.tpl: dunstrc
   terminal.tpl: terminalrc
+  chrome.tpl: manifest.json
   #  gtk.tpl: gtk.css
   #  gtkrc.tpl: gtkrc
