--- a/themer/Tama/colors.yaml
+++ b/themer/Tama/colors.yaml
@@ -1,10 +1,10 @@
 level1fg: '#ffffff'
 level1bg: '#808cc8'
-level2fg: '#000000'
+level2fg: '#ffffff'
 level2bg: '#a3b1d9'
-level3fg: '#000000'
+level3fg: '#5f5f5f'
 level3bg: '#cdd5e9'
-level4fg: '#000000'
+level4fg: '#5f5f5f'
 level4bg: '#eef0f6'
-level1fgalt: '#eef0f6'
-level1bgalt: '#3a42a4'
+level1fgalt: '#ffffff'
+level1bgalt: '#2facff'
