--- a/themer/Akira2/manifest.json
+++ b/themer/Akira2/manifest.json
@@ -12,10 +12,13 @@
     "colors" : {
       "frame" : [40, 19, 44],
       "toolbar" : [160, 139, 158],
-      "ntp_text" : [20, 40, 0],
-      "ntp_link" : [36, 70, 0],
+      "ntp_background" : [160, 139, 158],
+      "ntp_text" : [255, 254, 207],
+      "bookmark_text" : [255, 254, 207],
+      "tab_text" : [233, 203, 158],
+      "ntp_text" : [233, 203, 158],
       "ntp_section" : [207, 221, 192],
-      "button_background" : [255, 255, 255]
+      "button_background" : [81, 57, 85]
     },
     "tints" : {
       "buttons" : [0.33, 0.5, 0.47]
