--- a/themer/Haruhi/manifest.json
+++ b/themer/Haruhi/manifest.json
@@ -12,10 +12,13 @@
     "colors" : {
       "frame" : [100, 41, 20],
       "toolbar" : [171, 64, 25],
-      "ntp_text" : [20, 40, 0],
-      "ntp_link" : [36, 70, 0],
+      "ntp_background" : [171, 64, 25],
+      "ntp_text" : [254, 158, 100],
+      "bookmark_text" : [254, 158, 100],
+      "tab_text" : [252, 217, 151],
+      "ntp_text" : [253, 186, 99],
       "ntp_section" : [207, 221, 192],
-      "button_background" : [255, 255, 255]
+      "button_background" : [137, 52, 23]
     },
     "tints" : {
       "buttons" : [0.33, 0.5, 0.47]
