--- a/themer/Homura/manifest.json
+++ b/themer/Homura/manifest.json
@@ -12,10 +12,13 @@
     "colors" : {
       "frame" : [5, 5, 5],
       "toolbar" : [66, 66, 63],
-      "ntp_text" : [20, 40, 0],
-      "ntp_link" : [36, 70, 0],
+      "ntp_background" : [66, 66, 63],
+      "ntp_text" : [218, 217, 213],
+      "bookmark_text" : [218, 217, 213],
+      "tab_text" : [218, 217, 213],
+      "ntp_text" : [218, 217, 213],
       "ntp_section" : [207, 221, 192],
-      "button_background" : [255, 255, 255]
+      "button_background" : [40, 41, 39]
     },
     "tints" : {
       "buttons" : [0.33, 0.5, 0.47]
