--- a/themer/Kazuki/manifest.json
+++ b/themer/Kazuki/manifest.json
@@ -12,10 +12,13 @@
     "colors" : {
       "frame" : [28, 31, 75],
       "toolbar" : [30, 81, 180],
-      "ntp_text" : [20, 40, 0],
-      "ntp_link" : [36, 70, 0],
+      "ntp_background" : [30, 81, 180],
+      "ntp_text" : [224, 244, 243],
+      "bookmark_text" : [224, 244, 243],
+      "tab_text" : [216, 248, 255],
+      "ntp_text" : [216, 248, 255],
       "ntp_section" : [207, 221, 192],
-      "button_background" : [255, 255, 255]
+      "button_background" : [31, 47, 146]
     },
     "tints" : {
       "buttons" : [0.33, 0.5, 0.47]
