--- a/themer/Kutori2/manifest.json
+++ b/themer/Kutori2/manifest.json
@@ -12,10 +12,13 @@
     "colors" : {
       "frame" : [95, 32, 40],
       "toolbar" : [184, 115, 74],
-      "ntp_text" : [20, 40, 0],
-      "ntp_link" : [36, 70, 0],
+      "ntp_background" : [184, 115, 74],
+      "ntp_text" : [254, 234, 139],
+      "bookmark_text" : [254, 234, 139],
+      "tab_text" : [240, 223, 117],
+      "ntp_text" : [252, 229, 115],
       "ntp_section" : [207, 221, 192],
-      "button_background" : [255, 255, 255]
+      "button_background" : [163, 69, 69]
     },
     "tints" : {
       "buttons" : [0.33, 0.5, 0.47]
