--- a/themer/Rei/manifest.json
+++ b/themer/Rei/manifest.json
@@ -12,10 +12,13 @@
     "colors" : {
       "frame" : [107, 9, 22],
       "toolbar" : [254, 9, 27],
-      "ntp_text" : [20, 40, 0],
-      "ntp_link" : [36, 70, 0],
+      "ntp_background" : [254, 9, 27],
+      "ntp_text" : [252, 168, 173],
+      "bookmark_text" : [252, 168, 173],
+      "tab_text" : [252, 168, 173],
+      "ntp_text" : [252, 168, 173],
       "ntp_section" : [207, 221, 192],
-      "button_background" : [255, 255, 255]
+      "button_background" : [190, 4, 17]
     },
     "tints" : {
       "buttons" : [0.33, 0.5, 0.47]
