--- a/themer/Tama/i3.conf
+++ b/themer/Tama/i3.conf
@@ -13,8 +13,8 @@ set $mod Mod4
 
 #                       BORDER          BACKGROUND      TEXT            INDICATOR
 client.focused          #a3b1d9    #a3b1d9    #ffffff    #a3b1d9
-client.focused_inactive #cdd5e9    #cdd5e9    #5f5f5f    #cdd5e9
-client.unfocused        #eef0f6    #eef0f6    #5f5f5f    #eef0f6
+client.focused_inactive #cdd5e9    #cdd5e9    #00005f    #cdd5e9
+client.unfocused        #eef0f6    #eef0f6    #000000    #eef0f6
 client.urgent           #808cc8    #808cc8    #ffffff    #808cc8
 
 # Font for window titles. Will also be used by the bar unless a different font
