--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -8,8 +8,8 @@
 # SWIPE GESTURES:
 ###############################################################################
 
-gesture swipe right 3 i3-msg "workspace prev"
-gesture swipe left 3 i3-msg "workspace next"
+gesture swipe right 3 i3-msg "workspace next"
+gesture swipe left 3 i3-msg "workspace prev"
 
 ###############################################################################
 # This application normally determines your touchpad device
