--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -10,6 +10,8 @@
 
 gesture swipe right 3 i3-msg "workspace next"
 gesture swipe left 3 i3-msg "workspace prev"
+gesture swipe up 3 i3-msg "scratchpad show"
+gesture swipe down 3 i3-msg "scratchpad show"
 
 ###############################################################################
 # This application normally determines your touchpad device
