--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -8,8 +8,8 @@
 # SWIPE GESTURES:
 ###############################################################################
 
-gesture swipe right 3 i3-msg "workspace next"
-gesture swipe left 3 i3-msg "workspace prev"
+gesture swipe right 3 i3-msg "workspace prev"
+gesture swipe left 3 i3-msg "workspace next"
 gesture swipe up 3 i3-msg "scratchpad show"
 gesture swipe down 3 i3-msg "scratchpad show"
 
