--- a/themer/Kagari/i3.conf
+++ b/themer/Kagari/i3.conf
@@ -12,10 +12,10 @@
 set $mod Mod4
 
 #                       BORDER          BACKGROUND      TEXT            INDICATOR
-client.focused          {{level2bg}}    {{level2bg}}    {{level2fg}}    {{level2bg}}
-client.focused_inactive {{level3bg}}    {{level3bg}}    {{level3fg}}    {{level3bg}}
-client.unfocused        {{level4bg}}    {{level4bg}}    {{level4fg}}    {{level4bg}}
-client.urgent           {{level1bg}}    {{level1bg}}    {{level1fg}}    {{level1bg}}
+client.focused          #4b685c    #4b685c    #dcd9c5    #4b685c
+client.focused_inactive #adb479    #adb479    #fcfce3    #adb479
+client.unfocused        #e4e6d1    #e4e6d1    #384751    #e4e6d1
+client.urgent           #1e272e    #1e272e    #dcd9c5    #1e272e
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
