--- a/themer/Kagari/colors.yaml
+++ b/themer/Kagari/colors.yaml
@@ -2,7 +2,7 @@ level1fg: '#dcd9c5'
 level1bg: '#1e272e'
 level2fg: '#dcd9c5'
 level2bg: '#4b685c'
-level3fg: '#fcfce3'
+level3fg: '#384751'
 level3bg: '#adb479'
 level4fg: '#384751'
 level4bg: '#e4e6d1'
