--- a/themer/Kagari/i3.conf
+++ b/themer/Kagari/i3.conf
@@ -13,7 +13,7 @@ set $mod Mod4
 
 #                       BORDER          BACKGROUND      TEXT            INDICATOR
 client.focused          #4b685c    #4b685c    #dcd9c5    #4b685c
-client.focused_inactive #adb479    #adb479    #fcfce3    #adb479
+client.focused_inactive #adb479    #adb479    #384751    #adb479
 client.unfocused        #e4e6d1    #e4e6d1    #384751    #e4e6d1
 client.urgent           #1e272e    #1e272e    #dcd9c5    #1e272e
 
