--- a/themer/Shana/i3.conf
+++ b/themer/Shana/i3.conf
@@ -12,10 +12,10 @@
 set $mod Mod4
 
 #                       BORDER          BACKGROUND      TEXT            INDICATOR
-client.focused          #893417    #893417    #fdba63    #893417
-client.focused_inactive #ab4019    #ab4019    #fe9e64    #ab4019
-client.unfocused        #df6322    #df6322    #89321f    #df6322
-client.urgent           #642914    #642914    #fcd997    #642914
+client.focused          #000000    #000000    #71bcff    #000000
+client.focused_inactive #000000    #000000    #2479d2    #000000
+client.unfocused        #0c5190    #0c5190    #dac5c6    #0c5190
+client.urgent           #000000    #000000    #bbddff    #000000
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
