--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -12,6 +12,19 @@ gesture swipe right 3 i3-msg "workspace next_on_output"
 gesture swipe left 3 i3-msg "workspace prev_on_output"
 gesture swipe up 3 i3-msg "scratchpad show"
 gesture swipe down 3 i3-msg "scratchpad show"
+gesture swipe right 4 i3-msg "focus right"
+gesture swipe left 4 i3-msg "focus left"
+gesture swipe up 4 i3-msg "focus up"
+gesture swipe down 4 i3-msg "focus down"
+
+
+#gesture swipe left_up 4
+#gesture swipe right_up 4 i3-msg "kill"
+
+gesture pinch out i3-msg "fullscreen enable"
+gesture pinch in i3-msg "fullscreen disable"
+gesture pinch clockwise /usr/bin/xbacklight -dec 20
+gesture pinch anticlockwise /usr/bin/xbacklight -inc 20
 
 ###############################################################################
 # This application normally determines your touchpad device
