--- a/themer/Miuna/colors.yaml
+++ b/themer/Miuna/colors.yaml
@@ -4,7 +4,7 @@ level3fg: '#2479d2'
 level2bg: '#000000'
 level2fg: '#71bcff'
 level3bg: '#000000'
-level4fg: '#dac5c6'
-level4bg: '#0c5190'
+level4bg: '#9f9fcf'
+level4fg: '#0c3170'
 level1fgalt: '#000000'
 level1bgalt: '#5b81ba'
