--- a/themer/Miuna/i3.conf
+++ b/themer/Miuna/i3.conf
@@ -14,7 +14,7 @@ set $mod Mod4
 #                       BORDER          BACKGROUND      TEXT            INDICATOR
 client.focused          #000000    #000000    #71bcff    #000000
 client.focused_inactive #000000    #000000    #2479d2    #000000
-client.unfocused        #0c5190    #0c5190    #dac5c6    #0c5190
+client.unfocused        #9f9fcf    #9f9fcf    #0c3170    #9f9fcf
 client.urgent           #000000    #000000    #bbddff    #000000
 
 # Font for window titles. Will also be used by the bar unless a different font
