--- a/themer/Chisaki/i3.conf
+++ b/themer/Chisaki/i3.conf
@@ -12,10 +12,10 @@
 set $mod Mod4
 
 #                       BORDER          BACKGROUND      TEXT            INDICATOR
-client.focused          #be0411    #be0411    #fca8ad    #be0411
-client.focused_inactive #fe091b    #fe091b    #fca8ad    #fe091b
-client.unfocused        #fa5d66    #fa5d66    #5d0612    #fa5d66
-client.urgent           #6b0916    #6b0916    #fca8ad    #6b0916
+client.focused          #513955    #513955    #e9cb9e    #513955
+client.focused_inactive #a08b9e    #a08b9e    #fffecf    #a08b9e
+client.unfocused        #d1bbcf    #d1bbcf    #311929    #d1bbcf
+client.urgent           #28132c    #28132c    #e9cb9e    #28132c
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
