--- a/themer/Miuna/i3.conf
+++ b/themer/Miuna/i3.conf
@@ -41,7 +41,7 @@ bindsym $mod+Return exec xfce4-terminal
 bindsym $mod+Shift+Return exec thunar
 
 # start evince
-bindsym $mod+z exec evince
+bindsym $mod+z exec sioyek
 
 # kill focused window
 bindsym $mod+Shift+q kill
