--- a/themer/Miuna2/colors.yaml
+++ b/themer/Miuna2/colors.yaml
@@ -1,10 +1,10 @@
-level1fg: "#e9cb9e"
-level1bg: "#28132c"
-level2fg: "#e9cb9e"
-level2bg: "#513955"
-level3fg: "#fffecf"
-level3bg: "#a08b9e"
-level4fg: "#311929"
-level4bg: "#d1bbcf"
-level1fgalt: "#331a2a"
-level1bgalt: "#e3c896"
+level1fg: '#bbddff'
+level1bg: '#000000'
+level3fg: '#2479d2'
+level2bg: '#000000'
+level2fg: '#71bcff'
+level3bg: '#000000'
+level4bg: '#9f9fcf'
+level4fg: '#0c3170'
+level1fgalt: '#000000'
+level1bgalt: '#5b81ba'
