--- a/themer/Miuna2/i3.conf
+++ b/themer/Miuna2/i3.conf
@@ -12,10 +12,10 @@
 set $mod Mod4
 
 #                       BORDER          BACKGROUND      TEXT            INDICATOR
-client.focused          #513955    #513955    #e9cb9e    #513955
-client.focused_inactive #a08b9e    #a08b9e    #fffecf    #a08b9e
-client.unfocused        #d1bbcf    #d1bbcf    #311929    #d1bbcf
-client.urgent           #28132c    #28132c    #e9cb9e    #28132c
+client.focused          #000000    #000000    #71bcff    #000000
+client.focused_inactive #000000    #000000    #2479d2    #000000
+client.unfocused        #9f9fcf    #9f9fcf    #0c3170    #9f9fcf
+client.urgent           #000000    #000000    #bbddff    #000000
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
