--- a/themer/Ai2/colors.yaml
+++ b/themer/Ai2/colors.yaml
@@ -1,10 +1,10 @@
-level1fg: "#e9cb9e"
-level1bg: "#28132c"
-level2fg: "#e9cb9e"
-level2bg: "#513955"
-level3fg: "#fffecf"
-level3bg: "#a08b9e"
-level4fg: "#311929"
-level4bg: "#d1bbcf"
-level1fgalt: "#331a2a"
-level1bgalt: "#e3c896"
+level1fg: "#FFFDF2"
+level1bg: "#462D19"
+level2fg: "#FFFDF2"
+level2bg: "#764F25"
+level3fg: "#472F1A"
+level3bg: "#D7BD71"
+level4fg: "#472F1A"
+level4bg: "#F1EFB2"
+level1fgalt: "#442D1A"
+level1bgalt: "#90C99C"
